[package]
name = "accessory"
version = "2.0.0"
edition = "2021"
rust-version = "1.71.0"
authors = [
  "Art <amolc@pm.me>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"

description = "A configurable get/set/get_mut derive macro"

repository = "https://github.com/Alorel/accessory-rs"
keywords = ["derive", "macro", "getters", "setters"]
categories = ["development-tools"]
include = [
  "src/",
  "Cargo.toml",
]

[features]
_debug = ["syn/extra-traits"]

[lib]
proc-macro = true

[dependencies]
macroific = {version = "2", features = ["attr_parse", "full"]}
proc-macro2 = "1"
syn = { version = "2"}
quote = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
